changed the location of video to left panel, fix the gap between the character in whiteBoard, remove face mapping for better visibility

--- a/skilldrill/src/Room.css
+++ b/skilldrill/src/Room.css
@@ -144,7 +144,6 @@ body {
 }
 .editorWrap span{
     color:white;
-    margin: 30px;
 }
 .editorWrap h5{
     margin: 5px;
