--- a/skilldrill/src/components/Board/canvas.css
+++ b/skilldrill/src/components/Board/canvas.css
@@ -21,8 +21,11 @@
 }
 
 canvas{
-    background-color: #282A36;
-    height:81vmin;
+    z-index:10;
+    /* width:150px;
+    height:150px; */
+    position: absolute;
+    left:65px;
 }
 
 .btn-width {
